# visuallinks

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
addons/: protocol.txt
addons/firefox/: hidden-content.xpi
addons/firefox/findbar_tweak/: bootstrap.js  chrome.manifest
addons/firefox/findbar_tweak/chrome/content/: findInTabs.xul  findbar.xul  movetoTop_FIT.xul  options.xul  optionsFF25.xul  optionsMac.xul
addons/firefox/findbar_tweak/chrome/skin/common/: findbar.css  options.css  sights.css
addons/firefox/findbar_tweak/chrome/skin/linux/: findbar.css  options.css
addons/firefox/findbar_tweak/chrome/skin/mac/: findbar.css  options.css
addons/firefox/findbar_tweak/chrome/skin/win/: findbar.css
addons/firefox/findbar_tweak/resource/: defaults.js
addons/firefox/findbar_tweak/resource/modules/: FF25Tweaks.jsm  FindBarUI.jsm  blurCloses.jsm  builtinPrefs.jsm  counter.jsm  ctrlF.jsm  fillSelectedText.jsm  findInTabs.jsm  findbartweak.jsm  globalFB.jsm  grid.jsm  hideOnClose.jsm  highlightByDefault.jsm  highlightColor.jsm  highlightDoc.jsm  highlights.jsm  initFindbar.jsm  moveToBottom.jsm  moveToTop.jsm  perTab.jsm  preferences.jsm  rememberStartup.jsm  resizeTextbox.jsm  sights.jsm
addons/firefox/findbar_tweak/resource/modules/compatibilityFix/: ClearFields.jsm  FF25.jsm  Mac.jsm  TreeStyleTab.jsm  autopager.jsm  customize.jsm  findlist.jsm  lessChrome.jsm  sandboxFixes.jsm  windowFixes.jsm
addons/firefox/findbar_tweak/resource/modules/utils/: attributes.jsm  browserMediator.jsm  keysetAid.jsm  listenerAid.jsm  moduleAid.jsm  objectWatcher.jsm  observerAid.jsm  overlayAid.jsm  prefAid.jsm  preferencesUtils.jsm  privateBrowsingAid.jsm  (+10 more)
addons/firefox/html/: ContextMenu.js  desktop-search.html  map-simple.html  maps.html
addons/firefox/src/: chrome.manifest  install.rdf  src.xpi
addons/firefox/src/content/: Queue.js  VislinkClient.js  grab.js  myjs.js  preferences.js  preferences.xul  throttle.js  vislink.css  vislink.xul
addons/firefox/src/defaults/preferences/: vislinks.js
cmake/: AddComponent.cmake  AddSubdirOption.cmake  CopyFiles.cmake  FindOpenCL.cmake  FindQxt.cmake  FindTesseract.cmake  FindTinyXML.cmake
components/costanalysis/: CMakeLists.txt  downSample.glsl  featureMap.glsl  saliencyFilter.glsl
components/costanalysis/filterGenerator/: add_filters.m  gauss.m  make_kernel.m
components/costanalysis/include/: glcostanalysis.h
components/costanalysis/src/: glcostanalysis.cpp  saliencyFilter.glsl
components/ipc_server/: CMakeLists.txt
components/ipc_server/include/: ClientInfo.hxx  ipc_server.hpp  window_monitor.hpp
components/ipc_server/src/: ClientInfo.cxx  ipc_server.cpp  window_monitor.cpp
components/lpng/: CMakeLists.txt
components/renderer_gl/: CMakeLists.txt  blurX.glsl  blurY.glsl
components/renderer_gl/include/: glrenderer.h
components/renderer_gl/src/: glrenderer.cpp
components/routing_cpu/: CMakeLists.txt
components/routing_cpu/include/: cpurouting.h
components/routing_cpu/src/: cpurouting.cpp
components/routing_cpu_dijkstra/: CMakeLists.txt
components/routing_cpu_dijkstra/include/: cpurouting-dijkstra.h  dijkstra.h
components/routing_cpu_dijkstra/src/: cpurouting-dijkstra.cpp  dijkstra.cpp
components/routing_dummy/: CMakeLists.txt
components/routing_dummy/include/: dummyrouting.h
components/routing_dummy/src/: dummyrouting.cpp
components/routing_gpu/: CMakeLists.txt  routing.cl  sorting.cl
components/routing_gpu/include/: gpurouting.h
components/routing_gpu/src/: gpurouting.cpp
components/routing_ice_proxy/: CMakeLists.txt
components/staticcore/: CMakeLists.txt
components/staticcore/include/: staticcore.h
components/staticcore/src/: slots.cpp  staticcore.cpp
components/tools/: AnimatedPopup.cxx  CMakeLists.txt  HierarchicTileMap.cxx  JSONParser.cxx  NodeRenderer.cxx  PartitionHelper.cxx  Rect.cxx  fbo.cxx  fbo.h  linkdescription.cpp  qt_helper.cxx  routing.cxx
components/tools/glsl/: CMakeLists.txt  HashedMap.h  glinfo.cpp  glinfo.h  glsl.cpp  glsl.h  glutils.cpp  glutils.h
components/transparencyanalysis/: CMakeLists.txt
components/xmlconfig/: CMakeLists.txt
components/xmlconfig/include/: xmlconfig.h
components/xmlconfig/src/: xmlconfig.cpp
components/xmlconfig/tinyxml/: CMakeLists.txt
components/zlib/: CMakeLists.txt
docs/: desgin.pptx
include/: HierarchicTileMap.hpp  JSONParser.h  NodeRenderer.hpp  PartitionHelper.hxx  clock.hxx  color.h  component.h  config.h  configurable.h  core.h  costanalysis.h  datatypes.h  float2.hpp  linkdescription.h  log.hpp  proxy.h  qt_helper.hxx  renderer.h  routing.h  slots.hpp  string_utils.h  transparencyanalysis.h
include/common/: PreviewWindow.hpp  componentarguments.h  hashedmap.h
include/slotdata/: Preview.hpp  TileHandler.hpp  component_selection.hpp  image.hpp  mouse_event.hpp  polygon.hpp  text_popup.hpp
libs/libqxt/: CMakeLists.txt
libs/libqxt/include/QxtGui/: qxtwindowsystem.h
libs/libqxt/src/widgets/: qxtglobalshortcut_p.h
libs/libqxt/src/widgets/win/: qxtwindowsystem_win.cpp
libs/libqxt/src/widgets/x11/: qxtwindowsystem_x11.cpp
qt-ncc/: CMakeLists.txt
qt-ncc/include/: FastMatchTemplate.h  text_widget.hpp
qt-ncc/src/: FastMatchTemplate.cpp  text_widget.cpp
qt-ocr/: CMakeLists.txt
qt-ocr/include/: screenshot_widget.hpp
qt-ocr/src/: main.cpp  screenshot_widget.cpp
qtfullscreensystem/: CMakeLists.txt  blend.frag  main.cpp  qglwidget.cpp  qglwidget.h  qtconfig.xml  remove_links.frag  render_below.frag  render_below.vert  routing.cl  saliencyFilter.glsl  simple.frag  simple.vert
qtfullscreensystem/include/: PreviewWindow.hpp  Shader.hpp  Window.hpp  application.hpp  qglwidget.h  qglwidget.hpp  render_thread.hpp
qtfullscreensystem/src/: PreviewWindow.cpp  Shader.cpp  Window.cpp  application.cpp  main.cpp  qglwidget.cpp  render_thread.cpp
qtsearch/: CMakeLists.txt  client.html
qtsearch/include/: WebPage.hpp  text_widget.hpp
qtsearch/src/: main.cpp  text_widget.cpp
singleimagesystem/: CMakeLists.txt  config.xml  main.cpp
text_detection_test/: findword.m  text2image.m
