

set(COMPONENTROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(COMPONENTSRC_DIR ${COMPONENTROOT}/src)
set(COMPONENTINC_DIR ${COMPONENTROOT}/include)
include_directories(${LINKS_INCLUDE_DIR} ${COMPONENTINC_DIR} ${COMPONENTROOT})

add_subdirectory(tinyxml)
ADD_DEFINITIONS( -DTIXML_USE_STL )


set(HEADER_FILES ${COMPONENTINC_DIR}/xmlconfig.h
    )

set(SOURCE_FILES ${COMPONENTSRC_DIR}/xmlconfig.cpp
    )

add_library(xmlconfig ${HEADER_FILES} ${SOURCE_FILES})

set(REQ_INC_DIRS ${COMPONENTINC_DIR} ${COMPONENTROOT})
set(REQ_LIBS  tinyxml xmlconfig)
add_component_data(REQ_INC_DIRS REQ_LIBS)